log-app/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-output-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      containers:
        - name: log-output-writer
          image: p3xu/log-output:v0.3
          volumeMounts:
            - name: log-output
              mountPath: /logs
        - name: log-output-reader
          image: p3xu/log-output:v0.3
          volumeMounts:
            - name: log-output
              mountPath: /logs
      volumes:
        - name: log-output
          emptyDir: {}
